--- a/routine.html
+++ b/routine.html
@@ -162,7 +162,36 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>1-2 tablespoons olive oil</td>
 <!--<tr><td>        </td><td>Vegetable prebiotic mashup drink</td>-->
 <!--<tr><td>        </td><td>Cucumber, macadamia nuts</td>-->
-<tr><td>        </td><td>Morning supplements (See list below)</td>
+<tr><td>        </td><td>Morning supplements </td>
+<tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
+<tr><td>        </td><td>Vitamin D3, Jarrow, 5000IU</td>
+<tr><td>        </td><td>OmegAvail Hi-Po, Designs For Health, 1 capsules</td>
+<tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations, 1 capsule</td>
+<tr><td>        </td><td>Lycopene 10 mg, NOW Foods, 1 capsule</td>
+<tr><td>        </td><td>Biotin 5mg, Allergy Research Group, 1 capsule</td>
+<tr><td>        </td><td>Myco Supreme, Designs For Health, 2 capsules</td>
+<tr><td>        </td><td>Astaxanthin, Designs For Health, 1 capsule <a href="https://pubmed.ncbi.nlm.nih.gov/35708049/" target="_blank">Link</a></td>  <!-- sandra kaufman, david minkoff video 4 years ago-->
+<tr><td>        </td><td>Annatto-E 300, Designs For Health, 1 capsules</td>
+<tr><td>        </td><td>Black Cumin Seed Oil, Sports Nutrition, 1 capsule</td>-->
+<tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9571518/" target="_blank">Link</a></td>
+<!--<tr><td>        </td><td>TMG (Trimethylglycine), Life Extension, 1 capsule</td>-->
+<tr><td>        </td><td>NAC (N-Acetylcysteine), Life Extension, 3 capsules</td>
+<tr><td>        </td><td>Perfect Amino, Body Health, 10 tablets</td>
+<tr><td>        </td><td>Hyaluronic acid, Pure Encapsulations, 1 capsule</td>
+<tr><td>        </td><td>Pomegranate Plus, Pure Encapsulations, 1 capsule</td>
+<!--<tr><td>        </td><td>Matcha Power, Pure Synergy, 2 capsules</td>-->
+<!--<tr><td>        </td><td>Cell Protector, Pure Synergy, 1 capsule</td>-->
+<tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td>
+<!--<tr><td>        </td><td>Rutin, Now Foods, 1 capsule</td>-->
+<!--<tr><td>        </td><td>Longenesis, Energy Blueprint Labs, 6 capsules</td>-->
+<!--<tr><td>        </td><td>Blue-Green Algae, Pure Synergy, 1 capsule</td>-->
+<tr><td>        </td><td>Morning supplements in powder form</td>
+<tr><td>        </td><td>Ceylon Cinnamon powder, 1/2 tsp</td>
+<tr><td>        </td><td>Parsley powder, 1/2 tsp</td>
+<!--<tr><td>        </td><td>Ginger powder, 1/2 tsp</td>-->
+<tr><td>        </td><td>Creatine powder, Thorne, 1 scoop</td>
+<!--<tr><td>        </td><td>Sea Buckthorne powder, Loov Organic, 1 tsp</td>-->
+<!--<tr><td>        </td><td>Apple peel powder, 1 tsp</td>-->
 <tr><td>11:00 AM </td><td>Lunch</td>
 <tr><td>        </td><td>Soup (lentils, leaks, celery, chicken, salt), dark leafy greens, razzberries, cacao nibs</td>
 <tr><td>        </td><td>Turn on range hood vent while cooking for air quality.</td>
@@ -192,44 +221,6 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Read in dim light </td>
 <tr><td>9:00 PM </td><td>Turn on air conditioner</td>
 <tr><td>10:00 PM</td><td>Go to sleep </td>
-</table>
-
-<br>
-<p><b>Morning Supplements</b></p>
-<table style="celllpadding: 100px">
-<tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
-<tr><td>        </td><td>Vitamin D3, Jarrow, 5000IU</td>
-<tr><td>        </td><td>OmegAvail Hi-Po, Designs For Health, 1 capsules</td>
-<tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations, 1 capsule</td>
-<tr><td>        </td><td>Lycopene 10 mg, NOW Foods, 1 capsule</td>
-<tr><td>        </td><td>Biotin 5mg, Allergy Research Group, 1 capsule</td>
-<tr><td>        </td><td>Myco Supreme, Designs For Health, 2 capsules</td>
-<tr><td>        </td><td>Astaxanthin, Designs For Health, 1 capsule <a href="https://pubmed.ncbi.nlm.nih.gov/35708049/" target="_blank">Link</a></td>  <!-- sandra kaufman, david minkoff video 4 years ago-->
-<tr><td>        </td><td>Annatto-E 300, Designs For Health, 1 capsules</td>
-<tr><td>        </td><td>Black Cumin Seed Oil, Sports Nutrition, 1 capsule</td>-->
-<tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9571518/" target="_blank">Link</a></td>
-<!--<tr><td>        </td><td>TMG (Trimethylglycine), Life Extension, 1 capsule</td>-->
-<tr><td>        </td><td>NAC (N-Acetylcysteine), Life Extension, 3 capsules</td>
-<tr><td>        </td><td>Perfect Amino, Body Health, 10 tablets</td>
-<tr><td>        </td><td>Hyaluronic acid, Pure Encapsulations, 1 capsule</td>
-<tr><td>        </td><td>Pomegranate Plus, Pure Encapsulations, 1 capsule</td>
-<!--<tr><td>        </td><td>Matcha Power, Pure Synergy, 2 capsules</td>-->
-<!--<tr><td>        </td><td>Cell Protector, Pure Synergy, 1 capsule</td>-->
-<tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td>
-<!--<tr><td>        </td><td>Rutin, Now Foods, 1 capsule</td>-->
-<!--<tr><td>        </td><td>Longenesis, Energy Blueprint Labs, 6 capsules</td>-->
-<!--<tr><td>        </td><td>Blue-Green Algae, Pure Synergy, 1 capsule</td>-->
-</table>
-
-<br>
-<p><b>Morning Supplements in powder form</b></p>
-<table style="celllpadding: 100px">
-<tr><td>        </td><td>Ceylon Cinnamon powder, 1/2 tsp</td>
-<tr><td>        </td><td>Parsley powder, 1/2 tsp</td>
-<!--<tr><td>        </td><td>Ginger powder, 1/2 tsp</td>-->
-<tr><td>        </td><td>Creatine powder, Thorne, 1 scoop</td>
-<!--<tr><td>        </td><td>Sea Buckthorne powder, Loov Organic, 1 tsp</td>-->
-<!--<tr><td>        </td><td>Apple peel powder, 1 tsp</td>-->
 </table>
 
 
