--- a/routine.html
+++ b/routine.html
@@ -126,8 +126,8 @@
             </h1>
 
           </div>
-        </div> <!-- / .row -->
-      </div> <!-- / .container -->
+        </div>
+      </div>
     </section>
 
     <!-- SECTION -->
@@ -148,57 +148,59 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Molecular hydrogen, one tablet in one cup of water</td>
 <tr><td>        </td><td>Potassium Bicarbonate, Pure Supplements, 1 capsule</td>
 <tr><td>        </td><td>Rinse mouth with xylitol tablets </td>
-<tr><td>        </td><td>Brisk walk outside 30 minutes to set circadian rhythm</td>
+<tr><td>        </td><td>Brisk walk outside 30 minutes</td>
 <tr><td>        </td><td>Red/infrared light therapy on entire body <a href="https://platinumtherapylights.com/products/biomax-rlt?variant=15601444487234" target="_blank">Link</a> </td> <!-- before sunscreen else it blocks red/IR light?-->
 <tr><td>        </td><td>Exercise including weight lifting, blood flow restriction training, running, interval training</td>
 <!--<tr><td>        </td><td>Maragen ionic calcium in two cups of water</td>-->
 <tr><td>        </td><td>Start work, listen to AudioCardio app for one hour </td>
 <!--<tr><td>      </td><td>Bilberry Extract, Pure Encapsulations, 1 capsule (Best taken before a meal)</td>-->
-<tr><td>8:00 AM </td><td>Go outside to set circadian rhythm</td>
+<tr><td>8:00 AM </td><td>Go outside in the sun to set circadian rhythm</td>
 <tr><td>8:30 AM </td><td>Drink fermented beet kvass <a href="https://pubmed.ncbi.nlm.nih.gov/34256014/" target="_blank">Link</a></td>
 <tr><td>9:00 AM </td><td>Breakfast</td>   
+<tr><td>        </td><td>Two pastured eggs and sunflower greens </td>
 <tr><td>        </td><td>Blend avocado, frisee, endive, blackberries, pomegranate seeds, lime or lemon juice, water.</td>
 <tr><td>        </td><td>The prebiotic vegetables above such as frisee etc are varied daily to create a diverse microbiome</td>
-<tr><td>        </td><td>1-2 tablespoons olive oil</td>
+<tr><td>        </td><td>Macadamia nuts</td>
+<tr><td>        </td><td>1 tablespoon olive oil</td>
 <!--<tr><td>        </td><td>Vegetable prebiotic mashup drink</td>-->
-<!--<tr><td>        </td><td>Cucumber, macadamia nuts</td>-->
-<tr><td>        </td><td>Morning supplements </td>
+<tr><td>        </td><td><b>Morning supplements:</b></td>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
 <tr><td>        </td><td>Vitamin D3, Jarrow, 5000IU</td>
 <tr><td>        </td><td>OmegAvail Hi-Po, Designs For Health, 1 capsules</td>
 <tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Lycopene 10 mg, NOW Foods, 1 capsule</td>
 <tr><td>        </td><td>Biotin 5mg, Allergy Research Group, 1 capsule</td>
-<tr><td>        </td><td>Myco Supreme, Designs For Health, 2 capsules</td>
 <tr><td>        </td><td>Astaxanthin, Designs For Health, 1 capsule <a href="https://pubmed.ncbi.nlm.nih.gov/35708049/" target="_blank">Link</a></td>  <!-- sandra kaufman, david minkoff video 4 years ago-->
 <tr><td>        </td><td>Annatto-E 300, Designs For Health, 1 capsules</td>
-<tr><td>        </td><td>Black Cumin Seed Oil, Sports Nutrition, 1 capsule</td>-->
+<tr><td>        </td><td>Black Cumin Seed Oil, Sports Nutrition, 1 capsule</td>
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9571518/" target="_blank">Link</a></td>
+<!--<tr><td>        </td><td>Myco Supreme, Designs For Health, 2 capsules</td>-->
 <!--<tr><td>        </td><td>TMG (Trimethylglycine), Life Extension, 1 capsule</td>-->
 <tr><td>        </td><td>NAC (N-Acetylcysteine), Life Extension, 3 capsules</td>
 <tr><td>        </td><td>Perfect Amino, Body Health, 10 tablets</td>
 <tr><td>        </td><td>Hyaluronic acid, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Pomegranate Plus, Pure Encapsulations, 1 capsule</td>
+<tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td>
 <!--<tr><td>        </td><td>Matcha Power, Pure Synergy, 2 capsules</td>-->
 <!--<tr><td>        </td><td>Cell Protector, Pure Synergy, 1 capsule</td>-->
-<tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td>
 <!--<tr><td>        </td><td>Rutin, Now Foods, 1 capsule</td>-->
 <!--<tr><td>        </td><td>Longenesis, Energy Blueprint Labs, 6 capsules</td>-->
 <!--<tr><td>        </td><td>Blue-Green Algae, Pure Synergy, 1 capsule</td>-->
-<tr><td>        </td><td>Morning supplements in powder form</td>
+<tr><td>        </td><td><b>Morning supplements in powder form:</b></td>
+<tr><td>        </td><td>Fermented Beet Powder, 2 servings</td>
 <tr><td>        </td><td>Ceylon Cinnamon powder, 1/2 tsp</td>
 <tr><td>        </td><td>Parsley powder, 1/2 tsp</td>
-<!--<tr><td>        </td><td>Ginger powder, 1/2 tsp</td>-->
 <tr><td>        </td><td>Creatine powder, Thorne, 1 scoop</td>
+<!--<tr><td>        </td><td>Ginger powder, 1/2 tsp</td>-->
 <!--<tr><td>        </td><td>Sea Buckthorne powder, Loov Organic, 1 tsp</td>-->
 <!--<tr><td>        </td><td>Apple peel powder, 1 tsp</td>-->
 <tr><td>11:00 AM </td><td>Lunch</td>
 <tr><td>        </td><td>Soup (lentils, leaks, celery, chicken, salt), dark leafy greens, razzberries, cacao nibs</td>
 <tr><td>        </td><td>Turn on range hood vent while cooking for air quality.</td>
-<tr><td>        </td><td>Chew dark leafy greens slowly and thoroughly to maximize reduction of nitrate to nitrite</td>
-<tr><td>        </td><td>Brisk walk outside for glucose uptake</td>
-<tr><td>        </td><td>This walk in the sun produces dopamine in the eyes which prevents myopia.</td>
-<tr><td>        </td><td>Lie outside in sun for 15 minutes, wear only shorts, cover face</td>
+<!--<tr><td>        </td><td>Chew dark leafy greens slowly and thoroughly to maximize reduction of nitrate to nitrite</td>-->
+<!--<tr><td>        </td><td>Brisk walk outside for glucose uptake</td>-->
+<tr><td>        </td><td>Go outside in the sun to produce dopamine in the eyes to prevent myopia</td>
+<tr><td>        </td><td>Lie outside in sun for 15 minutes, wear only shorts, cover face, no sunscreen</td>
 <tr><td>3:00 PM </td><td>Non-Sleep Deep Rest <a href="https://www.youtube.com/watch?v=AKGrmY8OSHM" target="_blank">Link</a> + NuCalm <a href="https://www.nucalm.com/" target="_blank">Link</a></td>
 <tr><td>3:30 PM </td><td>Dinner, as early as possible</td>
 <tr><td>        </td><td>Chicken or salmon, pearled sorghum, various steamed vegetables</td>
@@ -242,7 +244,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Maintain correct spine posture</td>
 <tr><td> </td><td>Various short exercises </td>
 <tr><td> </td><td>Go outside</td>
-<tr><td> </td><td>Drink water (8 cups per day)</td>
+<tr><td> </td><td>Drink water </td>
 <!--<tr><td> </td><td>Jump for lymphatic system and to correct posture</td>-->
 <!--<tr><td> </td><td>4-7-8 breathing</td>-->
 </table>
@@ -250,8 +252,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <br>
 <p><b>When Outside</b></p>
 <table style="celllpadding: 100px">
-<tr><td>        </td><td>Apply mineral sunscreen to face </td>
-<tr><td>        </td><td>Wear UV-blocking glasses to protect eyes from UV light </td>
+<tr><td>        </td><td>If after 8AM apply mineral sunscreen to face and wear UV-blocking glasses </td>
 <tr><td>        </td><td>Wear hat with wide brim to protect facial skin from UV light </td>
 <tr><td>        </td><td>Practice intermittent hypoxic training </td>
 <tr><td>        </td><td>Look far away </td>
