--- a/routine.html
+++ b/routine.html
@@ -161,14 +161,15 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Blend avocado, frisee, endive, blackberries, pomegranate seeds, lime or lemon juice, water.</td>
 <tr><td>        </td><td>The prebiotic vegetables above such as frisee etc are varied daily to create a diverse microbiome</td>
 <tr><td>        </td><td>Macadamia nuts</td>
-<tr><td>        </td><td>1 tablespoon olive oil</td>
+<tr><td>        </td><td>Olive oil, 1 tbsp</td>
 <!--<tr><td>        </td><td>Vegetable prebiotic mashup drink</td>-->
 <tr><td>        </td><td><b>Morning supplements:</b></td>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
 <tr><td>        </td><td>Vitamin D3, Jarrow, 5000IU</td>
-<tr><td>        </td><td>OmegAvail Hi-Po, Designs For Health, 1 capsules</td>
+<tr><td>        </td><td>Krill Oil, Mercola, 1-2 capsules</td>
 <tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Lycopene 10 mg, NOW Foods, 1 capsule</td>
+<tr><td>        </td><td>Arterosil, Designs for Health, 1 capsule</td>
 <tr><td>        </td><td>Biotin 5mg, Allergy Research Group, 1 capsule</td>
 <tr><td>        </td><td>Astaxanthin, Designs For Health, 1 capsule <a href="https://pubmed.ncbi.nlm.nih.gov/35708049/" target="_blank">Link</a></td>  <!-- sandra kaufman, david minkoff video 4 years ago-->
 <tr><td>        </td><td>Annatto-E 300, Designs For Health, 1 capsules</td>
@@ -190,7 +191,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Fermented Beet Powder, 2 servings</td>
 <tr><td>        </td><td>Ceylon Cinnamon powder, 1/2 tsp</td>
 <tr><td>        </td><td>Parsley powder, 1/2 tsp</td>
-<tr><td>        </td><td>Creatine powder, Thorne, 1 scoop</td>
+<!--<tr><td>        </td><td>Creatine powder, Thorne, 1 scoop</td>-->
 <!--<tr><td>        </td><td>Ginger powder, 1/2 tsp</td>-->
 <!--<tr><td>        </td><td>Sea Buckthorne powder, Loov Organic, 1 tsp</td>-->
 <!--<tr><td>        </td><td>Apple peel powder, 1 tsp</td>-->
@@ -215,7 +216,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Floss teeth </td>
 <tr><td>        </td><td>Tounge scraper </td>
 <tr><td>        </td><td>Hydro Floss with small amount of hydrogen peroxide </td>
-<tr><td>        </td><td>Sometimes dental oil pulling </td>
+<!--<tr><td>        </td><td>Sometimes dental oil pulling </td>-->
 <tr><td>8:00 PM </td><td>Lights dimmed to prepare for sleep</td>
 <tr><td>        </td><td>Potassium Bicarbonate, Pure Supplements, 1 capsule</td>
 <tr><td>        </td><td>Turn off computer </td>
@@ -231,7 +232,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>At the start of the meal, glycine powder, Vital Nutrients, about 4 grams</td>
 <tr><td>        </td><td>In the middle of the meal, if the meal has protein, EnzymixPro, Apex Energetics, 1-2 capsules</td>
-<tr><td>        </td><td>Blood Vessel Formula, Gladdin Longevity, 40 drops</td>
+<tr><td>        </td><td>Blood Vessel Formula, Gladdin Longevity, 1-2 ml</td>
 <tr><td>        </td><td>Eat slowly, chew well, be in a parasympathetic state</td>
 <tr><td>        </td><td>Brush teeth 30-40 minutes after eating</td>
 </table>
