--- a/routine.html
+++ b/routine.html
@@ -269,9 +269,10 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <br>
 <p><b>Quarterly Routine</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>VSEL stem cell therapy <a href="https://pubmed.ncbi.nlm.nih.gov/36752298/" target="_blank">Link</a> </td>
-<tr><td> </td><td>Ozone EBO2 therapy <a href="https://pubmed.ncbi.nlm.nih.gov/16156950/" target="_blank">Link</a> </td>
-<tr><td> </td><td>Plasma dilution / plasmapheresis <a href="https://pubmed.ncbi.nlm.nih.gov/35999337/" target="_blank">Link</a> </td>
+<tr><td> </td><td>Plasmapheresis <a href="https://pubmed.ncbi.nlm.nih.gov/35999337/" target="_blank">Link</a> </td>
+<tr><td> </td><td>Young plasma <a href="https://pubmed.ncbi.nlm.nih.gov/35236985/" target="_blank">Link</a> </td>
+<tr><td> </td><td>VSEL stem cells <a href="https://pubmed.ncbi.nlm.nih.gov/36752298/" target="_blank">Link</a> </td>
+<tr><td> </td><td>Ozone EBO2 <a href="https://pubmed.ncbi.nlm.nih.gov/16156950/" target="_blank">Link</a> </td>
 <!--<tr><td> </td><td>Bioregulator peptides</td>-->
 </table>
 
@@ -423,7 +424,6 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <br>
 <p><b>Future Plans</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Arterosil HP and Vascanox HP</td>
 <tr><td> </td><td>NanoVi <a href="https://eng3corp.com/" target="_blank">Link</a></td>
 <tr><td> </td><td>PEMF <a href="https://sedonawellness.com/" target="_blank">Link</a></td>
 <tr><td> </td><td>Sauna with electrolytes </td>
