--- a/routine.html
+++ b/routine.html
@@ -270,10 +270,11 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>Quarterly Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Plasmapheresis <a href="https://pubmed.ncbi.nlm.nih.gov/35999337/" target="_blank">Link</a> </td>
-<tr><td> </td><td>Young plasma <a href="https://pubmed.ncbi.nlm.nih.gov/35236985/" target="_blank">Link</a> </td>
+<tr><td> </td><td>Young plasma infusion<a href="https://pubmed.ncbi.nlm.nih.gov/35236985/" target="_blank">Link</a> </td>
 <tr><td> </td><td>VSEL stem cells <a href="https://pubmed.ncbi.nlm.nih.gov/36752298/" target="_blank">Link</a> </td>
 <tr><td> </td><td>Ozone EBO2 <a href="https://pubmed.ncbi.nlm.nih.gov/16156950/" target="_blank">Link</a> </td>
-<!--<tr><td> </td><td>Bioregulator peptides</td>-->
+<!--<tr><td> </td><td>UV blood iradiation</td>-->
+<!--<tr><td> </td><td>Plaquex</td>-->
 </table>
 
               
@@ -358,6 +359,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <table style="celllpadding: 100px">
 <tr><td> </td><td>No processed food</td>
 <tr><td> </td><td>No canned foods</td>
+<tr><td> </td><td>No trans fats, no fried foods, no margarine</td>
 <tr><td> </td><td>No burned or blackened foods</td>
 <tr><td> </td><td>No high-heat cooking</td>
 <tr><td> </td><td>No high smoke point oils</td>
