--- a/index.html
+++ b/index.html
@@ -67,23 +67,18 @@
                           </a>
                       </li>
                       <li class="nav-item">
+                          <a class="nav-link" id="navbarPages" href="plasmapheresis.html">
+                              Plasmapheresis
+                          </a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" id="navbarPages" href="young-plasma.html">
+                              Young Plasma
+                          </a>
+                      </li>
+                      <li class="nav-item">
                           <a class="nav-link" id="navbarPages" href="vsels.html">
                               VSELs
-                          </a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" id="navbarPages" href="science.html">
-                              Science
-                          </a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" id="navbarPages" href="videos.html">
-                              Videos
-                          </a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" id="navbarPages" href="faq.html">
-                              FAQ
                           </a>
                       </li>
                       <li class="nav-item">
@@ -113,7 +108,7 @@
                   <div class="col-12 col-md-7 col-lg-6 order-md-1">
                       <!-- Heading -->
                       <h1 class="display-3 text-center text-md-start">
-                        VSELs are the <span class="text-primary">next generation</span> of stem cell therapy
+                        The <span class="text-primary">next generation</span> of advanced regenerative treatments
                         <!--<span class="text-primary"></span>-->
                          <br><br>
                       </h1>
@@ -121,7 +116,7 @@
                   <div class="col-12 col-md-5 col-lg-6 order-md-2">
                       <!-- Image -->
                       <!--<img src="images/img1.png" style="border:1px solid #f2f2f2" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0" alt="..."  data-aos-delay="100">-->
-                      <iframe width="560" height="315" src="https://www.youtube.com/embed/Jfpl1Job3aM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                      <iframe width="560" height="315" src="https://www.youtube.com/embed/o5qh5wI4FeU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
               </div> <!-- / .row -->
           </div> <!-- / .container -->
@@ -130,7 +125,7 @@
       <br>
 
 
-    <!-- SECTION -->
+    <!--
     <section class="pt-6 pt-md-8">
       <div class="container">
         <div class="row justify-content-center">
@@ -139,10 +134,10 @@
             We are recruiting for a randomized clinical trial of VSEL stem cell treatment in patients with heart failure.  The trial will be in San Diego CA.  All treatment will be provided for free.  If you are interested in participating in this trial please contact us.
 
           </div>
-        </div> <!-- / .row -->
-      </div> <!-- / .container -->
+        </div> 
+      </div> 
     </section>
-
+    -->
 
     <!-- TESTIMONIALS -->
     <!--
