--- a/plasmapheresis.html
+++ b/plasmapheresis.html
@@ -117,7 +117,7 @@
 
             <!-- Heading -->
             <h1 class="display-4 text-center">
-              Contact Us
+                    Plasmapheresis / Plasma Dilution
             </h1>
 
           </div>
@@ -129,25 +129,27 @@
     <section class="pt-6 pt-md-8">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-12 col-md-10 col-lg-9 col-xl-8">
-              
-            <p>
-            <b>Address</b> <br>
-              Institute of Regeneration <br>
-              To be determined <br>
-            </p>
+          <div class="col-12 col-md-10 col-lg-9 col-xl-10">
 
-            <p>
-            <b>Hours</b> <br>
-              Mon - Thu: 8am to 5pm <br>
-              Friday: 8am to 4pm <br>
-              Sat - Sun: Closed <br>
-            </p>
+            2022 August<br>
+            Old plasma dilution reduces human biological age: a clinical study <br>
+            <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/35999337/">https://pubmed.ncbi.nlm.nih.gov/35999337/</a> <br>
+            <br>    
 
-            <p>
-            <b>Email</b> <br>
-              hello@institutereg.com
-            </p>
+            2021 June <br>
+            Attenuation of age-elevated blood factors by repositioning plasmapheresis: A novel perspective and approach <br>
+            <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/34083162/">https://pubmed.ncbi.nlm.nih.gov/34083162/</a> <br>
+            <br>   
+
+            2021 February <br>
+            Plasma dilution improves cognition and attenuates neuroinflammation in old mice <br>
+            <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/33191466/">https://pubmed.ncbi.nlm.nih.gov/33191466/</a> <br>
+            <br>
+
+            2020 May <br>
+            Rejuvenation of three germ layers tissues by exchanging old blood plasma with saline-albumin <br>
+            <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/32474458/">https://pubmed.ncbi.nlm.nih.gov/32474458/</a> <br>
+            <br>
 
           </div>
         </div> <!-- / .row -->
