--- a/videos.html
+++ b/videos.html
@@ -58,40 +58,35 @@
                   <!-- Navigation -->
                   
                   <ul class="navbar-nav"> <!-- removed ms-auto david -->
-                      <li class="nav-item">
-                              &nbsp;&nbsp;
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" id="navbarPages" href="index.html">
-                              Home
-                          </a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" id="navbarPages" href="vsels.html">
-                              VSELs
-                          </a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" id="navbarPages" href="science.html">
-                              Science
-                          </a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" id="navbarPages" href="videos.html">
-                              Videos
-                          </a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" id="navbarPages" href="faq.html">
-                              FAQ
-                          </a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" id="navbarPages" href="contact.html">
-                              Contact
-                          </a>
-                      </li>
-                  </ul>
+                    <li class="nav-item">
+                            &nbsp;&nbsp;
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="navbarPages" href="index.html">
+                            Home
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="navbarPages" href="plasmapheresis.html">
+                            Plasmapheresis
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="navbarPages" href="young-plasma.html">
+                            Young Plasma
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="navbarPages" href="vsels.html">
+                            VSELs
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="navbarPages" href="contact.html">
+                            Contact
+                        </a>
+                    </li>
+                </ul>
                   
 
                   <!-- Button -->
