--- a/routine.html
+++ b/routine.html
@@ -265,8 +265,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>Quarterly Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td><a href="plasmapheresis.html" target="_blank">Plasma dilution</a></td>
-<tr><td> </td><td><a href="young-plasma.html" target="_blank">Young plasma</a> </td>
-<tr><td> </td><td>VSEL stem cells <a href="https://pubmed.ncbi.nlm.nih.gov/36752298/" target="_blank">Link</a> </td>
+<tr><td> </td><td><a href="young-plasma.html" target="_blank">Young plasma infusion</a> </td>
+<tr><td> </td><td><a href="vsels.html" target="_blank">VSEL stem cells</a> </td>
 <tr><td> </td><td>Ozone EBO2 <a href="https://pubmed.ncbi.nlm.nih.gov/16156950/" target="_blank">Link</a> </td>
 <!--<tr><td> </td><td>UV blood iradiation</td>-->
 <!--<tr><td> </td><td>Plaquex</td>-->
