--- a/young-plasma.html
+++ b/young-plasma.html
@@ -136,7 +136,7 @@
                 </div>
                 <div class="col-12 col-md-7 col-lg-6 cust-pad order-md-2 ps-11">
                     <h2>
-                    Young plasma presentation RAADfest 2023
+                    Young Plasma Presentation RAADfest 2023
                     </h2>
                     <p class="fs-lg text-muted mb-6">
                         <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
@@ -146,8 +146,6 @@
             </div> <!-- / .row -->
         </div> <!-- / .container -->
     </section>
-
-
 
 
     <!-- SECTION -->
@@ -162,7 +160,17 @@
             Molecular hallmarks of heterochronic parabiosis at single-cell resolution <br>
             <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/35236985/">https://pubmed.ncbi.nlm.nih.gov/35236985/</a> <br>
             "aged blood reduces global gene expression, and young blood restores it in select cell types" <br>
+            "young blood both reverses age-related profiles and initiates novel pathways" <br>
             <!-- from youtube Dian Ginsberg RAADfest 2023 video at 10:40 -->
+            <br>
+
+            2020 June<br>
+            Blood Serum Stimulates p38-Mediated Proliferation and Changes in Global Gene Expression... <br>
+            <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/32560212/">https://pubmed.ncbi.nlm.nih.gov/32560212/</a> <br>
+            "profound effects on gene expression depending on the age and sex of the plasma donor" <br>
+            "rejuvenating effect of young blood and blood plasma on various adult stem cell populations" <br>
+            "demonstrated beneficial effects on the molecular, structural, functional and even cognitive level" <br>
+            <!-- from youtube Dian Ginsberg RAADfest 2023 video at 18:04 -->
             <br>
 
             2020 March<br>
