--- a/plasmapheresis.html
+++ b/plasmapheresis.html
@@ -125,11 +125,36 @@
       </div> <!-- / .container -->
     </section>
 
+
+    <section class="pt-4 pt-md-11" style="padding-bottom:25px">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 col-md-5 col-lg-6 order-md-1">
+                    <!-- Image -->
+                    <!--<img src="images/img1.png" style="border:1px solid #f2f2f2" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0" alt="..."  data-aos-delay="100">-->
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/BtAx5s6JaiU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="col-12 col-md-7 col-lg-6 cust-pad order-md-2 ps-11">
+                    <h2>
+                    Plasma Dilution Presentation 
+                    </h2>
+                    <p class="fs-lg text-muted mb-6">
+                        <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
+                        A talk by Irina Conboy PhD from The Conboy Laboratory at the University of California at Berkeley on January 17, 2023. 
+                    </p>                      
+                </div>
+            </div> <!-- / .row -->
+        </div> <!-- / .container -->
+    </section>
+
+
     <!-- SECTION -->
     <section class="pt-6 pt-md-8">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-9 col-xl-10">
+
+            <h2>Science</h2>
 
             2022 August<br>
             Old plasma dilution reduces human biological age: a clinical study <br>
