--- a/plasmapheresis.html
+++ b/plasmapheresis.html
@@ -117,7 +117,7 @@
 
             <!-- Heading -->
             <h1 class="display-4 text-center">
-                    Plasmapheresis / Plasma Dilution
+                    Plasma Dilution
             </h1>
 
           </div>
@@ -136,12 +136,33 @@
                 </div>
                 <div class="col-12 col-md-7 col-lg-6 cust-pad order-md-2 ps-11">
                     <h2>
-                    Plasma Dilution Presentation 
+                    Plasma Dilution  
                     </h2>
                     <p class="fs-lg text-muted mb-6">
                         <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
-                        A talk by Irina Conboy PhD from The Conboy Laboratory at the University of California at Berkeley on January 17, 2023. 
+                        Irina Conboy PhD from the Conboy Laboratory at the University of California at Berkeley on January 17, 2023. 
                     </p>                      
+                </div>
+            </div> <!-- / .row -->
+        </div> <!-- / .container -->
+    </section>
+
+    <section class="pt-4 pt-md-11" style="padding-bottom:25px">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 col-md-5 col-lg-6 order-md-1">
+                    <!-- Image -->
+                    <!--<img src="images/img1.png" style="border:1px solid #f2f2f2" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0" alt="..."  data-aos-delay="100">-->
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/jR_sLjFuu0Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="col-12 col-md-7 col-lg-6 cust-pad order-md-2 ps-11">
+                    <h2>
+                    Plasma Dilution  
+                    </h2>
+                    <p class="fs-lg text-muted mb-6">
+                        <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
+                        Irina Conboy PhD presents research on the rejuvenation effects of plasma dilution, demonstrating its significant impact on reducing senescence, neuroinflammation, and promoting neurogenesis.
+                    </p> 
                 </div>
             </div> <!-- / .row -->
         </div> <!-- / .container -->
@@ -159,6 +180,16 @@
             2022 August<br>
             Old plasma dilution reduces human biological age: a clinical study <br>
             <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/35999337/">https://pubmed.ncbi.nlm.nih.gov/35999337/</a> <br>
+            <br>    
+
+            2022 August<br>
+            Systemic induction of senescence in young mice after single heterochronic blood exchange <br>
+            <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/35902645/">https://pubmed.ncbi.nlm.nih.gov/35902645/</a> <br>
+            <br>    
+
+            2022 April<br>
+            Case Report: Therapeutic and immunomodulatory effects of plasmapheresis in long-haul COVID <br>
+            <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/35464182/">https://pubmed.ncbi.nlm.nih.gov/35464182/</a> <br>
             <br>    
 
             2021 June <br>
