--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                           </a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" id="navbarPages" href="plasmapheresis.html">
-                              Plasmapheresis
+                          <a class="nav-link" id="navbarPages" href="plasma-dilution.html">
+                              Plasma Dilution
                           </a>
                       </li>
                       <li class="nav-item">
