--- a/routine.html
+++ b/routine.html
@@ -71,8 +71,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="navbarPages" href="plasmapheresis.html">
-                            Plasmapheresis
+                        <a class="nav-link" id="navbarPages" href="plasma-dilution.html">
+                            Plasma Dilution
                         </a>
                     </li>
                     <li class="nav-item">
@@ -264,8 +264,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <br>
 <p><b>Quarterly Routine</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td><a href="plasmapheresis.html" target="_blank">Plasma dilution</a></td>
-<tr><td> </td><td><a href="young-plasma.html" target="_blank">Young plasma infusion</a> </td>
+<tr><td> </td><td><a href="plasma-dilution.html" target="_blank">Plasma dilution</a></td>
+<tr><td> </td><td><a href="young-plasma.html" target="_blank">Young plasma</a> </td>
 <tr><td> </td><td><a href="vsels.html" target="_blank">VSEL stem cells</a> </td>
 <tr><td> </td><td>Ozone EBO2 <a href="https://pubmed.ncbi.nlm.nih.gov/16156950/" target="_blank">Link</a> </td>
 <!--<tr><td> </td><td>UV blood iradiation</td>-->
