--- a/young-plasma.html
+++ b/young-plasma.html
@@ -71,8 +71,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="navbarPages" href="plasmapheresis.html">
-                            Plasmapheresis
+                        <a class="nav-link" id="navbarPages" href="plasma-dilution.html">
+                            Plasma Dilution
                         </a>
                     </li>
                     <li class="nav-item">
@@ -91,7 +91,7 @@
                         </a>
                     </li>
                 </ul>
-                  
+
 
                   <!-- Button -->
                   <!--
@@ -136,11 +136,11 @@
                 </div>
                 <div class="col-12 col-md-7 col-lg-6 cust-pad order-md-2 ps-11">
                     <h2>
-                    Young Plasma 2023
+                    Young Plasma 
                     </h2>
                     <p class="fs-lg text-muted mb-6">
                         <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
-                        Dian Ginsberg MD shows how young blood plasma therapy significantly slows the pace of aging
+                        Dian Ginsberg MD presents at RAADfest 2023 showing how young blood plasma therapy significantly slows the pace of aging
                     </p>                      
                 </div>
             </div> <!-- / .row -->
@@ -158,11 +158,11 @@
                 </div>
                 <div class="col-12 col-md-7 col-lg-6 cust-pad order-md-2 ps-11">
                     <h2>
-                    Young Plasma 2022
+                    Young Plasma
                     </h2>
                     <p class="fs-lg text-muted mb-6">
                         <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
-                        Dian Ginsberg MD shows how young blood plasma therapy significantly slows the pace of aging
+                        Dian Ginsberg MD presents that infusing plasma from young donors (ages 18-25) has been shown in the literature to bring positive effects in Alzheimers, Parkinsons and other neurodegenerative diseases. Improvement has been seen in diabetes and blood glucose numbers, eyesight, back pain, autoimmune issues, psoriasis and more. 
                     </p>                      
                 </div>
             </div> <!-- / .row -->
