--- a/routine.html
+++ b/routine.html
@@ -268,6 +268,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td><a href="young-plasma.html" target="_blank">Young plasma</a> </td>
 <tr><td> </td><td><a href="vsels.html" target="_blank">VSEL stem cells</a> </td>
 <tr><td> </td><td>Ozone EBO2 <a href="https://pubmed.ncbi.nlm.nih.gov/16156950/" target="_blank">Link</a> </td>
+<tr><td> </td><td>Check CPAP machine apnea-hypopnea index </td>
 <!--<tr><td> </td><td>UV blood iradiation</td>-->
 <!--<tr><td> </td><td>Plaquex</td>-->
 </table>
@@ -294,6 +295,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>Biyearly Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Go to dentist for teeth cleaning </td>
+<tr><td> </td><td>HVAC Service </td> <!--per michael rubino home cleanse-->
 </table>
 
 <br>
@@ -311,7 +313,9 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Urine pH strip test</td>
 <tr><td> </td><td>Nitric oxide strip test</td>
-<tr><td> </td><td>NAD testing</td>
+<tr><td> </td><td>Measure arterial pulse wave velocity on a Withings scale </td>
+<tr><td> </td><td>Measure BOLT score (Body Oxygen Level Test)</td>
+<tr><td> </td><td>NAD testing, Jinfiniti</td>  <!--Bryan Johnson used Jinfiniti April 2023-->
 <tr><td> </td><td>Genova Diagnostics, ION Panel</td>
 <tr><td> </td><td>Prodrome Sciences, ProdromeScan</td>
 <tr><td> </td><td>Genova Diagnostics, GI Effects Stool Profile</td>
@@ -320,6 +324,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Great Plains Labs, GPLTOX</td>
 <tr><td> </td><td>Cyrex Array 10 - Food Immune Reactivity Screen</td>
 <!--<tr><td> </td><td>Cyrex Array 2 - Intestinal Antigenic Permeability Screen</td> --> <!-- Actionable?-->
+<tr><td> </td><td>AgingSOS Advanced Panel, Jinfiniti</td>
 <tr><td> </td><td>Review genetic data at PureGenomics <a href="https://www.puregenomics.com/" target="_blank">Link</a></td>
 <tr><td> </td><td>Review EWG water filter functionality <a href="https://www.ewg.org/tapwater/system.php?pws=CA0710003" target="_blank">Link</a></td>
 <tr><td> </td><td>Review Bristle dental microbiome results <a href="https://www.bristlehealth.com/" target="_blank">Link</a></td>
