--- a/services.html
+++ b/services.html
@@ -152,7 +152,7 @@
             VSEL stem cells <br />
             EBOO <br />
             Brain Frequency <br />
-            Neurofeedback <br />
+            Neurofeedback from peak brain institute<br />
             TMS 
             <br />
 
