--- a/services.html
+++ b/services.html
@@ -78,37 +78,41 @@
 
           <!-- Navigation -->
 
-          <ul class="navbar-nav">
-            <!-- removed ms-auto david -->
+          <ul class="navbar-nav"> <!-- removed ms-auto david -->
             <li class="nav-item">
-              &nbsp;&nbsp;
+                    &nbsp;&nbsp;
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="navbarPages" href="index.html">
-                Home
-              </a>
+                <a class="nav-link" id="navbarPages" href="index.html">
+                    Home
+                </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="navbarPages" href="plasma-dilution.html">
-                Plasma Dilution
-              </a>
+                <a class="nav-link" id="navbarPages" href="services.html">
+                    Services 
+                </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="navbarPages" href="young-plasma.html">
-                Young Plasma
-              </a>
+                <a class="nav-link" id="navbarPages" href="plasma-dilution.html">
+                    Plasma Dilution
+                </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="navbarPages" href="vsels.html">
-                VSELs
-              </a>
+                <a class="nav-link" id="navbarPages" href="young-plasma.html">
+                    Young Plasma
+                </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="navbarPages" href="contact.html">
-                Contact
-              </a>
+                <a class="nav-link" id="navbarPages" href="vsels.html">
+                    VSELs
+                </a>
             </li>
-          </ul>
+            <li class="nav-item">
+                <a class="nav-link" id="navbarPages" href="contact.html">
+                    Contact
+                </a>
+            </li>
+        </ul>
 
           <!-- Button -->
           <!--
@@ -145,15 +149,17 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-9 col-xl-10">
-            <h2>Science</h2>
 
-            Plasma Dilution<br />
-            Young Plasma <br />
-            VSEL stem cells <br />
-            EBOO <br />
-            Brain Frequency <br />
-            Neurofeedback from peak brain institute<br />
-            TMS 
+            <a href="plasma-dilution.html">Plasma Dilution</a> <br />
+            <a href="young-plasma.html">Young Plasma</a> <br />
+            <a href="vsels.html">VSEL Stem Cells</a> <br />
+
+            <br />
+            Coming soon: <br />
+            Healthspan Testing <br />
+            EBOO / EBO2 <br />
+            Brain Frequency / MagVenture <br />
+            Neurofeedback from Peak Brain Institute<br />
             <br />
 
         </div>
