--- a/index.html
+++ b/index.html
@@ -58,35 +58,40 @@
                   <!-- Navigation -->
                   
                   <ul class="navbar-nav"> <!-- removed ms-auto david -->
-                      <li class="nav-item">
-                              &nbsp;&nbsp;
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" id="navbarPages" href="index.html">
-                              Home
-                          </a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" id="navbarPages" href="plasma-dilution.html">
-                              Plasma Dilution
-                          </a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" id="navbarPages" href="young-plasma.html">
-                              Young Plasma
-                          </a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" id="navbarPages" href="vsels.html">
-                              VSELs
-                          </a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" id="navbarPages" href="contact.html">
-                              Contact
-                          </a>
-                      </li>
-                  </ul>
+                    <li class="nav-item">
+                            &nbsp;&nbsp;
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="navbarPages" href="index.html">
+                            Home
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="navbarPages" href="services.html">
+                            Services 
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="navbarPages" href="plasma-dilution.html">
+                            Plasma Dilution
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="navbarPages" href="young-plasma.html">
+                            Young Plasma
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="navbarPages" href="vsels.html">
+                            VSELs
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="navbarPages" href="contact.html">
+                            Contact
+                        </a>
+                    </li>
+                </ul>
                   
 
                   <!-- Button -->
