--- a/vsels.html
+++ b/vsels.html
@@ -67,6 +67,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" id="navbarPages" href="services.html">
+                            Services 
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" id="navbarPages" href="plasma-dilution.html">
                             Plasma Dilution
                         </a>
