--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                   <div class="col-12 col-md-7 col-lg-6 order-md-1">
                       <!-- Heading -->
                       <h1 class="display-3 text-center text-md-start">
-                        The <span class="text-primary">next generation</span> of advanced regenerative treatments
+                        The next generation of regenerative medicine
                         <!--<span class="text-primary"></span>-->
                          <br><br>
                       </h1>
