--- a/routine.html
+++ b/routine.html
@@ -309,6 +309,12 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 </table>
 
 <br>
+<p><b>Decade Routine</b></p>
+<table style="celllpadding: 100px">
+<tr><td> </td><td>Heidelberg Hydrochloric Acid Test </td>
+</table>
+
+<br>
 <p><b>Occasional Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Urine pH strip test</td>
