--- a/services.html
+++ b/services.html
@@ -156,9 +156,10 @@
 
             <br />
             Coming soon: <br />
-            Healthspan Testing <br />
-            EBOO / EBO2 <br />
-            Brain Frequency / MagVenture <br />
+            EBOO / Extracorporeal Blood Ozone And Oxygenation <br />
+            Medical Consultation <br />
+            Brain Frequency <br />
+            Transcranial Magnetic Stimulation <br />
             Neurofeedback from Peak Brain Institute<br />
             <br />
 
