--- a/services.html
+++ b/services.html
@@ -155,13 +155,16 @@
             <a href="vsels.html">VSEL Stem Cells</a> <br />
 
             <br />
+            <!--
             Coming soon: <br />
+            Lipoprotein apheresis <br />
             EBOO / Extracorporeal Blood Ozone And Oxygenation <br />
-            Medical Consultation <br />
+            Deep Dive Medical Consultation <br />
             Brain Frequency <br />
             Transcranial Magnetic Stimulation <br />
             Neurofeedback from Peak Brain Institute<br />
             <br />
+            -->
 
         </div>
         </div>
