--- a/plasma-dilution.html
+++ b/plasma-dilution.html
@@ -137,11 +137,33 @@
                 <div class="col-12 col-md-5 col-lg-6 order-md-1">
                     <!-- Image -->
                     <!--<img src="images/img1.png" style="border:1px solid #f2f2f2" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0" alt="..."  data-aos-delay="100">-->
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/VT90GINHW4M?t=8s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="col-12 col-md-7 col-lg-6 cust-pad order-md-2 ps-11">
+                    <h2>
+                        David Haase MD and Plasma Dilution  
+                    </h2>
+                    <p class="fs-lg text-muted mb-6">
+                        <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
+                        David Haase MD presents an overview of therapeutic plasma dilution for a variety of conditions
+                    </p> 
+                </div>
+            </div> <!-- / .row -->
+        </div> <!-- / .container -->
+    </section>
+
+
+    <section class="pt-4 pt-md-11" style="padding-bottom:25px">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 col-md-5 col-lg-6 order-md-1">
+                    <!-- Image -->
+                    <!--<img src="images/img1.png" style="border:1px solid #f2f2f2" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0" alt="..."  data-aos-delay="100">-->
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/BtAx5s6JaiU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="col-12 col-md-7 col-lg-6 cust-pad order-md-2 ps-11">
                     <h2>
-                    Plasma Dilution  
+                        Irina Conboy PhD and Plasma Dilution
                     </h2>
                     <p class="fs-lg text-muted mb-6">
                         <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
@@ -162,7 +184,7 @@
                 </div>
                 <div class="col-12 col-md-7 col-lg-6 cust-pad order-md-2 ps-11">
                     <h2>
-                    Plasma Dilution  
+                        Irina Conboy PhD and Plasma Dilution
                     </h2>
                     <p class="fs-lg text-muted mb-6">
                         <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
@@ -202,9 +224,19 @@
             <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/34083162/">https://pubmed.ncbi.nlm.nih.gov/34083162/</a> <br>
             <br>   
 
+            2021 Aug <br>
+            Therapeutic plasma exchange with albumin: a new approach to treat Alzheimer's disease <br>
+            <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/34338566/">https://pubmed.ncbi.nlm.nih.gov/34338566/</a> <br>
+            <br>   
+
             2021 February <br>
             Plasma dilution improves cognition and attenuates neuroinflammation in old mice <br>
             <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/33191466/">https://pubmed.ncbi.nlm.nih.gov/33191466/</a> <br>
+            <br>
+
+            2020 Oct <br>
+            A randomized, controlled clinical trial of plasma exchange with albumin replacement for Alzheimer's disease: Primary results of the AMBAR Study <br>
+            <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/32715623/">https://pubmed.ncbi.nlm.nih.gov/32715623/</a> <br>
             <br>
 
             2020 May <br>
