--- a/young-plasma.html
+++ b/young-plasma.html
@@ -141,7 +141,7 @@
                 </div>
                 <div class="col-12 col-md-7 col-lg-6 cust-pad order-md-2 ps-11">
                     <h2>
-                    Young Plasma 
+                        Dian Ginsberg MD & Young Plasma 
                     </h2>
                     <p class="fs-lg text-muted mb-6">
                         <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
@@ -163,12 +163,35 @@
                 </div>
                 <div class="col-12 col-md-7 col-lg-6 cust-pad order-md-2 ps-11">
                     <h2>
-                    Young Plasma
+                        Dian Ginsberg MD & Young Plasma 
                     </h2>
                     <p class="fs-lg text-muted mb-6">
                         <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
-                        Dian Ginsberg MD presents that infusing plasma from young donors (ages 18-25) has been shown in the literature to bring positive effects in Alzheimers, Parkinsons and other neurodegenerative diseases. Improvement has been seen in diabetes and blood glucose numbers, eyesight, back pain, autoimmune issues, psoriasis and more. 
+                        Dian Ginsberg MD presents in 2022 that plasma from young donors has been shown to bring positive effects in neurodegenerative diseases, diabetes, blood glucose numbers, eyesight, back pain, autoimmune issues, psoriasis and more. 
                     </p>                      
+                </div>
+            </div> <!-- / .row -->
+        </div> <!-- / .container -->
+    </section>
+
+
+
+    <section class="pt-4 pt-md-11" style="padding-bottom:25px">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 col-md-5 col-lg-6 order-md-1">
+                    <!-- Image -->
+                    <!--<img src="images/img1.png" style="border:1px solid #f2f2f2" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0" alt="..."  data-aos-delay="100">-->
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/4mI-PgU2YDw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="col-12 col-md-7 col-lg-6 cust-pad order-md-2 ps-11">
+                    <h2>
+                        Tony Wyss-Coray PhD & Young Plasma 
+                    </h2>
+                    <p class="fs-lg text-muted mb-6">
+                        <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
+                        Tony Wyss-Coray PhD is a Professor of Neurology at Stanford University.  He presents that circulatory blood factors can rejuvenate old brains
+                    </p>
                 </div>
             </div> <!-- / .row -->
         </div> <!-- / .container -->
@@ -186,8 +209,10 @@
             2022 March<br>
             Molecular hallmarks of heterochronic parabiosis at single-cell resolution <br>
             <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/35236985/">https://pubmed.ncbi.nlm.nih.gov/35236985/</a> <br>
-            "aged blood reduces global gene expression, and young blood restores it in select cell types" <br>
-            "young blood both reverses age-related profiles and initiates novel pathways" <br>
+            "aged blood reduces global gene expression, and young blood restores it in select cell types" <br> <!-- page 2-->
+            "young blood both reverses age-related profiles and initiates novel pathways" <br> <!-- page 6 -->
+            "rejuvenation of genes encoding components of the electron transport chain is especially striking" <br> <!-- page 6 -->
+            <!--"young blood invokes new gene sets in addition to reversing established ageing patterns" <br>--> <!--abstract-->
             <!-- from youtube Dian Ginsberg RAADfest 2023 video at 10:40 -->
             <br>
 
@@ -206,6 +231,13 @@
             "infusions of young plasma into aged mice exert rejuvenation effects on the capillary transcriptome" <br>
             <!-- from youtube Dian Ginsberg RAADfest 2023 video at 9:32 -->
             <br>
+
+            <!--
+            2019<br>
+            Young Plasma Infusions Significantly Improve Clinical Symptoms and UPDRS Scores in Patients with Parkinson’s Disease <br>
+            <a target="_blank" href="https://www.youngplasmastudy.com/about-7">https://www.youngplasmastudy.com/about-7/</a> <br>
+            <br>
+            -->
 
           </div>
         </div> <!-- / .row -->
