--- a/young-plasma.html
+++ b/young-plasma.html
@@ -190,7 +190,7 @@
                     </h2>
                     <p class="fs-lg text-muted mb-6">
                         <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
-                        Tony Wyss-Coray PhD is a Professor of Neurology at Stanford University.  He presents that circulatory blood factors can rejuvenate old brains
+                        Tony Wyss-Coray PhD is a Professor of Neurology at Stanford University.  He presents that circulatory blood factors can rejuvenate old brains.
                     </p>
                 </div>
             </div> <!-- / .row -->
