--- a/services.html
+++ b/services.html
@@ -152,19 +152,18 @@
 
             <a href="plasma-dilution.html">Plasma Dilution</a> <br />
             <a href="young-plasma.html">Young Plasma</a> <br />
-            <a href="vsels.html">VSEL Stem Cells</a> <br />
-
             <br />
-            <!--
+
             Coming soon: <br />
+            <a href="vsels.html">VSEL Stem Cells</a> <br />
             Lipoprotein apheresis <br />
-            EBOO / Extracorporeal Blood Ozone And Oxygenation <br />
-            Deep Dive Medical Consultation <br />
+            EBOO / EBO2 / Extracorporeal Blood Ozone And Oxygenation <br />
+            Ultraviolet Blood Irradiation <br />
             Brain Frequency <br />
             Transcranial Magnetic Stimulation <br />
             Neurofeedback from Peak Brain Institute<br />
+            Deep Dive Medical Consultation <br />
             <br />
-            -->
 
         </div>
         </div>
