--- a/young-plasma.html
+++ b/young-plasma.html
@@ -205,6 +205,12 @@
 
             <h2>Science</h2>
 
+            2023 August<br>
+            Multi-omic rejuvenation and life span extension on exposure to youthful circulation<br>
+            <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/37500973/">https://pubmed.ncbi.nlm.nih.gov/37500973/</a> <br>
+            "drastically reduced the epigenetic age of blood and liver based on several clock models using two independent platforms." <br>
+            <br>
+
             2022 March<br>
             Molecular hallmarks of heterochronic parabiosis at single-cell resolution <br>
             <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/35236985/">https://pubmed.ncbi.nlm.nih.gov/35236985/</a> <br>
